blindage de l'ajout d'annonce
-blindage de l'ajout d'annonce
-stockage des photos dans un dossier dédié

--- a/vue_ajout_annonce.html
+++ b/vue_ajout_annonce.html
@@ -7,21 +7,20 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>Prêts</h1>
-    <!--<img src="images/test.png" alt="c'est le test.">-->
+    <h1>Ajout d'une annonce</h1>
 
-    <!--<p>At Mozilla, we’re a global community of</p>-->
     <fieldset>
     <legend>Les caracteristique de votre pret : </legend>
 
-    <form action="controller.php" method="post">
+    <form action="traitement_ajout_annonce.php" method="post" enctype="multipart/form-data" >
 
-      <input type="text" id="titre" name="titre", placeholder="titre :" required> *<br><br>
-      <input type="text" id="prix" name="prix", placeholder="prix :" required> *<br><br> <!-- faire un petit slider-->
-    
-      <!-- <input type="checkbox" name="Assurance" value="assurance"><br><br> -->
+      <input type="text" id="titre" name="titre", placeholder="titre :" required> *
+      <br><br>
+      <input type="number" id="prix" name="prix" min="0" placeholder="prix :" required> *
+      <br><br> <!-- faire un petit slider-->
 
-      <input type="file" id = "photo" name="photo" value="photo"><br><br>
+      <label for="photo">choisir une photo (JPG,PNG,JPEG): </label>
+      <input type="file" id = "photo" name="photo"><br><br>
 
       <fieldset><legend>categorie </legend>
         selectionner votre categorie
@@ -37,9 +36,10 @@
         <option value=9>matériel pro</option>
         <option value=10>services</option>
         <option value=11>divers</option>
-        </select><br><br></fieldset><br><br>
+        </select><br><br></fieldset><br>
 
-      <textarea name="description" id="" cols="30" rows="8", placeholder="description :"></textarea>*<br><br>
+      <textarea name="description" id="" cols="30" rows="8", placeholder="description :"></textarea>*
+      <br><br>
 
       <input type="reset" value="effacer">
       <input type="submit" value="calculer">
@@ -51,7 +51,3 @@
     <!--<p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>-->
   </body>
 </html>
-
-<?php
-/*faire des trucs comme ca pour avoir des briques modualaire*/ 
-/*exemple tres simples pour afficher une annonce*/
