v.1 lien vers les details
prémisse du lien vers les details des annonces

--- a/vue_ajout_annonce.html
+++ b/vue_ajout_annonce.html
@@ -20,7 +20,7 @@
       <br><br>
 
       <label for="photo">choisir une photo (JPG,PNG,JPEG): </label>
-      <input type="file" id = "photo" name="photo"><br><br>
+      <input type="file" id = "photo" name="photo" required>*<br><br>
 
       <fieldset><legend>categorie </legend>
         selectionner votre categorie
