correction inscription et connexion

--- a/Le_BONK/vue_connexion.html
+++ b/Le_BONK/vue_connexion.html
@@ -48,7 +48,7 @@
        
         <br><br>
        <h2> Pas de compte? </h2>
-        <a href="museeINSC.php"> inscrivez-vous! </a>
+        <a href="incription.php"> inscrivez-vous! </a>
       </form>
     </div>
 </body>
