--- a/Le_BONK/le_header.html
+++ b/Le_BONK/le_header.html
@@ -23,7 +23,7 @@
         
         <ul class="menu">
         <li><a href="accuille.php">acceuil</a></li>&nbsp;&nbsp;
-        <li><a href="recup_messages.php">message</a></li>&nbsp;&nbsp;
+        <li><a href="Messagerie/recup_messages.php">message</a></li>&nbsp;&nbsp;
         <li><a href="CREAnnonce.php">annonce</a></li>&nbsp;&nbsp;
         <li><a class="btn" href="vue_connexion.php">connection</a></li>&nbsp;
         <li><a class="btn-btn" href="incription.php">inscription</a></li>&nbsp;
